[gd_scene load_steps=9 format=3 uid="uid://xdrgxdgbg0r8"]

[ext_resource type="Script" path="res://Alien Attack/scripts/game.gd" id="1_4ietn"]
[ext_resource type="Texture2D" uid="uid://w1qyc2s22fvu" path="res://Alien Attack/assets/textures/bg.png" id="1_ltgo8"]
[ext_resource type="PackedScene" uid="uid://407h54dy7afh" path="res://Alien Attack/scenes/player.tscn" id="2_5a5vf"]
[ext_resource type="PackedScene" uid="uid://1n1rg8eigqc5" path="res://Alien Attack/scenes/hud.tscn" id="2_371y2"]
[ext_resource type="PackedScene" uid="uid://ct3mx5t8a6pul" path="res://Alien Attack/scenes/enemy_spawner.tscn" id="4_oaq5p"]
[ext_resource type="AudioStream" uid="uid://ddxi2ll4lw6xb" path="res://Alien Attack/assets/audio/hit.wav" id="6_ann0h"]
[ext_resource type="AudioStream" uid="uid://csc864flrl2a" path="res://Alien Attack/assets/audio/explode.wav" id="7_62wnv"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t7lqh"]
size = Vector2(20, 720)

[node name="Game" type="Node2D"]
script = ExtResource("1_4ietn")

[node name="UI" type="CanvasLayer" parent="."]

[node name="Hud" parent="UI" instance=ExtResource("2_371y2")]

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 1281.0
offset_bottom = 719.0
texture = ExtResource("1_ltgo8")
stretch_mode = 1

[node name="Player" parent="." instance=ExtResource("2_5a5vf")]
position = Vector2(61, 357)

[node name="EnemySpawner" parent="." instance=ExtResource("4_oaq5p")]

[node name="DeathZone" type="Area2D" parent="."]
position = Vector2(-150, 360)
collision_layer = 8
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeathZone"]
shape = SubResource("RectangleShape2D_t7lqh")

[node name="Enemy Hit Sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_ann0h")

[node name="Player Take Damage" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_62wnv")

[connection signal="take_Damage" from="Player" to="." method="_on_player_take_damage"]
[connection signal="enemySpawned" from="EnemySpawner" to="." method="_on_enemy_spawner_enemy_spawned"]
[connection signal="pathEnemySpawned" from="EnemySpawner" to="." method="_on_enemy_spawner_path_enemy_spawned"]
[connection signal="area_entered" from="DeathZone" to="." method="_on_area_2d_area_entered"]
